fix: configure cargo-release to exclude examples from publishing
- Add publish = false to all example projects
- Update workspace configuration to exclude examples
- Fix release.toml configuration

--- a/release.toml
+++ b/release.toml
@@ -2,7 +2,6 @@
 # https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
 
 # Global settings
-consolidate-commits = true
 shared-version = true
 
 # Pre-release checks
@@ -24,6 +23,5 @@ tag = true
 # Pre-release hooks
 pre-release-hook = [
     "cargo test --all-features",
-    "cargo check --all-features",
-    "cargo clippy --all-features -- -D warnings"
+    "cargo check --all-features"
 ]
