--- a/examples/trait_based_service/Cargo.toml
+++ b/examples/trait_based_service/Cargo.toml
@@ -2,6 +2,7 @@
 name = "trait_based_service"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 hsipc = { path = "../../hsipc", features = ["macros"] }
